fix: Test overflow scroll.

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@
 }
 
 
-html {
+html, body {
+  overflow: scroll;
   overscroll-behavior: contain;
 }
